--- a/styles/style.css
+++ b/styles/style.css
@@ -8,8 +8,8 @@
  }
  p{
     padding-top: 10px;
-    font-size: 15px;
     font-family: 'Raleway', sans-serif;
+    font-size: 12px;
     
 }
 a{
@@ -19,11 +19,6 @@ a{
 a:focus, a:hover{
         color: blue;
 }
-h2{
-    font-size: 15px;
-    text-align: center;
-    margin-top: -20px;
-} 
 h3{
     font-size: 10px;
 } 
@@ -82,17 +77,18 @@ h1{
 }
 .recherche {
     display: flex;
-    align-items: center;
     padding-top: 10px;
-    
+    overflow: hidden;
+    text-align: center;
+    padding-right: 12px;
 }
 .fa-map-marker-alt{
     background-color: #f2f2f2;
     padding: 5px 10px;
     border-radius: 95px 0 0 95px;
-    height: 30px;
-}
+    
 
+}
 .search{
     padding: 5px 0;
     border: 1px solid #DEEBFF;
@@ -108,10 +104,8 @@ h1{
 
 .filtre{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: start;
-    margin-top: 12px;
-   }
+    margin-top: 45px;
+}
 
 .box-filtre{
     display: flex;
@@ -126,6 +120,8 @@ h1{
     overflow: hidden;
     text-align: center;
     display: flex;
+    margin-left: 16px;
+    margin-right: 16px;
    }
 .search-filtre{   
     border: none;
@@ -171,8 +167,12 @@ input{
     color: black;  
 }
 .info{
-    display: flex;
-    justify-items: left;
+    display: flex; 
+}
+.info, p{
+    margin-top: 20px;
+    margin-left: 0;
+    font-size: 12px;
 }
 .fa-info{
     color: #0065FC;
@@ -185,8 +185,13 @@ input{
     margin: 18px;
     border-radius: 50%;
 }
-.container, h2{
-    margin-left: 15px;
+
+/*2 ème partie*/
+.container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap-reverse;
+    justify-content: space-evenly;
 }
 .card-img{
     display: flex;
@@ -217,32 +222,18 @@ img{
 }
 
 
-.item{
-    background: #f2f2f2;
-    border-radius: 15px;
-    padding-top: 42px;
-    margin-right: 600px;
+.item-container{
+    border: 2px solid black;
+    
 }
-.item, h3{
-    text-align: left;
-}
-.item2{
-    justify-content: flex-end;
-    flex-direction: column;
-    background: aqua;
-    padding-left: 15px;
-    margin-left: 18px;
-    text-align: center
-}
-.item3{
-    margin-top: 50px;
-}
+
 
 /*footer*/
 footer{
-    display: flex;
+    width: 100%;
     margin-top: 50px;
     background: #f2f2f2;
+    display: flex;
    
 }
 .card-footer{
