--- a/styles/style.css
+++ b/styles/style.css
@@ -1,249 +1,247 @@
+body {
+   background-color: white;
+   margin: 20px;
+   font-family: "Raleway", sans-serif;
+   color: black;
+}
+p {
+   font-family: "Raleway", sans-serif;
+   font-size: 12px;
+}
+a {
+   color: black;
+   text-decoration: none;
+}
+a:focus,
+a:hover {
+   color: blue;
+}
+h3 {
+   font-size: 10px;
+}
+header {
+   background-color: white;
+}
+.logo {
+   display: flex;
+   flex-direction: row;
+   align-items: baseline;
+}
 
-
-    body{
-     background-color: white;
-     margin: 20px;
-     font-family: 'Raleway', sans-serif;
-     color: black;
- }
- p{
-    padding-top: 10px;
-    font-family: 'Raleway', sans-serif;
-    font-size: 12px;
-    
-}
-a{
-    color: black;
-    text-decoration: none;
-}
-a:focus, a:hover{
-        color: blue;
-}
-h3{
-    font-size: 10px;
-} 
-header{
-    
-    background-color:white;
-}
-.logo{
-    display: flex;
-    flex-direction: row;
-    align-items: baseline;
-}
 /* navigation*/
-.navbar{
-       display: flex;
-       justify-content: space-between;
+.navbar {
+   display: flex;
+   justify-content: space-between;
 }
-.nav{
-    display: inline;
-    padding-top: 20px;
-    align-items: center;
-    font-size: 12px;
-   }
-.page-courante{
-    color: blue;
-    border-top: 2px blue solid;
-    padding-top: 12px;
+.nav {
+   display: inline;
+   padding-top: 20px;
+   align-items: center;
+   font-size: 12px;
 }
-.connexion{
-    color: #0065FC;
-    font-weight: 700;
+.page-courante {
+   color: blue;
+   border-top: 2px blue solid;
+   padding-top: 12px;
 }
-
-.nav ul{
-    list-style-type: none;
-    display: flex;
-    flex-wrap: wrap-reverse;
-    justify-content: flex-end;
- }
-.nav li{
-    margin-right: 30px;
-   
-    float: left ;
-    justify-content: space-between;
-}
-.nav a{
-    font-size: 1.3em;
-     
+.connexion {
+   color: #0065fc;
+   font-weight: 700;
 }
 
+.nav ul {
+   list-style-type: none;
+   display: flex;
+   flex-wrap: wrap-reverse;
+   justify-content: flex-end;
+}
+.nav li {
+   margin-right: 30px;
+
+   float: left;
+   justify-content: space-between;
+}
+.nav a {
+   font-size: 1.3em;
+}
 
 /*main */
-h1{
-    padding-top: 20px;
-    font-size: 18px;
+h1 {
+   padding-top: 20px;
+   font-size: 18px;
 }
 .recherche {
-    display: flex;
-    padding-top: 10px;
-    overflow: hidden;
-    text-align: center;
-    padding-right: 12px;
+   display: flex;
+   padding-top: 10px;
+   overflow: hidden;
+   text-align: center;
+   padding-right: 12px;
 }
-.fa-map-marker-alt{
-    background-color: #f2f2f2;
-    padding: 5px 10px;
-    border-radius: 95px 0 0 95px;
-    
-
+.fa-map-marker-alt {
+   background-color: #f2f2f2;
+   padding: 5px 10px;
+   border-radius: 95px 0 0 95px;
 }
-.search{
-    padding: 5px 0;
-    border: 1px solid #DEEBFF;
+.search {
+   padding: 5px 0;
+   border: 1px solid #deebff;
 }
-.submit{
-    padding: 5px 25px;
-    border-radius: 0 95px 95px 0;
-    border: none;
-    background: blue;
-    color: white;
-    width: 112px;
+.submit {
+   padding: 5px 25px;
+   border-radius: 0 95px 95px 0;
+   border: none;
+   background: blue;
+   color: white;
+   width: 112px;
 }
 
-.filtre{
-    display: flex;
-    margin-top: 45px;
+.filtre {
+   display: flex;
+   margin-top: 45px;
+}
+.content,
+h2 {
+   padding-top: 4px;
+   font-size: 20px;
 }
 
-.box-filtre{
-    display: flex;
-    justify-content: center;
-    height: 40px;
-    margin-left: 20px;
-    margin-top: 10px;
+.box-filtre {
+   display: flex;
+   justify-content: center;
+   height: 40px;
+   margin-left: 20px;
+   margin-top: 10px;
 }
-.box{
-    border: solid #f2f2f2;
-    border-radius: 45px 45px 45px 45px;
-    overflow: hidden;
-    text-align: center;
-    display: flex;
-    margin-left: 16px;
-    margin-right: 16px;
-   }
-.search-filtre{   
-    border: none;
+.box {
+   border: solid #f2f2f2;
+   border-radius: 45px 45px 45px 45px;
+   overflow: hidden;
+   text-align: center;
+   display: flex;
+   margin-left: 16px;
+   margin-right: 16px;
 }
-.fa-money-bill-wave{
-    align-items: center;
-    background: #DEEBFF;
-    border-radius: 50% 50%;
-    width: 30px;
-    padding-top: 8px;
-    color: #0065FC;
-    border: 3px solid #DEEBFF;
+.search-filtre {
+   border: none;
 }
-.fa-child{
-    align-items: center;
-    background: #DEEBFF;
-    border-radius: 50% 50%;
-    width: 30px;
-    padding-top: 8px;
-    color: #0065FC;
-    border: 3px solid #DEEBFF;
-}
-.fa-dog{
-    align-items: center;
-    background: #DEEBFF;
-    border-radius: 50% 50%;
-    width: 30px;
-    padding-top: 8px;
-    color: #0065FC;
-    border: 3px solid #DEEBFF;
-}
-.fa-heart{
-    align-items: center;
-    background: #DEEBFF;
-    border-radius: 50% 50%;
-    width: 30px;
-    padding-top: 8px;
-    color: #0065FC;
-    border: 3px solid #DEEBFF;
-}
-input{
-    text-align: center;
-    color: black;  
-}
-.info{
-    display: flex; 
-}
-.info, p{
-    margin-top: 20px;
-    margin-left: 0;
-    font-size: 12px;
-}
-.fa-info{
-    color: #0065FC;
-    font-size: 15px;
-    border: 2px solid #f2f2f2;
-    width: 20px;
-    height: 20px;
-    text-align: center;
-    padding: 5px;
-    margin: 18px;
-    border-radius: 50%;
+.box .fas {
+   align-items: center;
+   background: #f2f2f2;
+   border-radius: 50% 50%;
+   width: 40px;
+   border: 1px solid #f2f2f2;
+   padding-top: 10px;
+   color: #0065fc;
 }
 
+input {
+   text-align: center;
+   color: black;
+}
+/*information*/
+
+.info {
+   display: flex;
+}
+.info p {
+   margin-top: 26px;
+}
+.fa-info {
+   color: #0065fc;
+   font-size: 15px;
+   border: 2px solid #f2f2f2;
+   width: 20px;
+   height: 20px;
+   text-align: center;
+   padding: 5px;
+   margin: 18px;
+   border-radius: 50%;
+}
 /*2 ème partie*/
-.container{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap-reverse;
-    justify-content: space-evenly;
+.item,
+h2 {
+   font-size: 20px;
 }
-.card-img{
-    display: flex;
-    flex-wrap: wrap;
-    padding-bottom: 20px;
+.card {
+   background: white;
+   border: 2px solid white;
+   border-radius: 17px 17px 17px 17px;
 }
-.card{
-    background: white;
-    text-align: center;
-    border-radius: 20px;
-    margin: 15px;
+.card,
+h3,
+p {
+   margin-left: 12px;
 }
-.card, p{
-    text-align: left;
-    padding-top: -15px;
-    font-size: 9px;
+.card-text,
+p {
+   margin-top: 0;
+   padding-top: 0;
 }
-.card, h3, p{
-    margin-left: 12px;
+.stars {
+   color: #0065fc;
 }
-img{
+img {
    height: 100px;
-   width: 150px; 
+   width: 180px;
    padding-right: 4px;
    padding-top: 4px;
    padding-left: 4px;
-  
+}
+.container {
+   display: grid;
+   grid-template-columns: 2fr 1fr;
+}
+.item {
+   display: flex;
+   flex-wrap: wrap;
+   flex-direction: row;
+   background: #f2f2f2;
+   height: 850px;
+   width: 800px;
+   border-radius: 15px solid blue;
+}
+.item, h2{
+   margin-left: 20px;
+}
+.bloc-image{
+   display: flex;
+   flex-wrap: wrap;
+   flex-direction: row; 
+   justify-content: center;
+   margin-bottom: 400px;
 }
 
-
-.item-container{
-    border: 2px solid black;
-    
+.item1 {
+   background: #f2f2f2;
 }
-
+.card {
+   margin-top: 60px;
+}
+.item-icone {
+   display: inline-flex;
+}
+.item2 {
+   background: orchid;
+}
+.card-img {
+   display: flex;
+}
 
 /*footer*/
-footer{
-    width: 100%;
-    margin-top: 50px;
-    background: #f2f2f2;
-    display: flex;
-   
+footer {
+   width: 100%;
+   background: #f2f2f2;
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
-.card-footer{
-    margin-right: 100px;
-   
+.card-footer {
+   justify-content: space-between;
+   width: 100%;
+   max-width: 1440px;
 }
-ul{
-    padding: 0;
-    list-style-type: none;
-    text-align: left;
+ul {
+   padding: 0;
+   list-style-type: none;
+   text-align: left;
 }
- 
-    
