--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ a:hover {
 }
 
 h3 {
-   font-size: 10px;
-}
+   font-size: 15px;
+}  
 header {
    background-color: white;
 }
@@ -173,13 +173,19 @@ input {
    border: 2px solid white;
    border-radius: 17px 17px 17px 17px;
 }
-.card,h3,p {
+.card, h3, p {
    margin-left: 12px;
 }
-.card-text,
-p {
+.card-text, p {
    margin-top: 0;
    padding-top: 0;
+}
+.card-text{
+   margin-top: -12px;
+}
+.hotel-price{
+   margin-bottom: 8px;
+   margin-top: -12px;
 }
 .stars {
    color: #0065fc;
@@ -197,7 +203,7 @@ img {
    padding-left: 4px;
    border-radius: 17px 17px 0 0;
 }
-.container {
+#container {
    display: grid;
    grid-template-columns: 2fr 1fr;
 }
@@ -232,7 +238,7 @@ img {
    flex-wrap: wrap;
    flex-direction: row;
    background: #f2f2f2;
-   height: 750px;
+   height: 580px;
    width: 800px;
    border-radius: 10px;
 }
@@ -249,11 +255,12 @@ img {
 .card-item1{
    display: flex;
    background: white;
+   border: 5px solid white;
    border-radius: 17px;
    margin-right: 30px;
    margin-left: 30px;
-   margin-top: 15px;
-   margin-bottom: 60px;
+   margin-top: 20px;
+   margin-bottom: 20px;
    height: 120px;
 }
 .item1-icone {
@@ -270,11 +277,12 @@ img {
 .pop{
    border-radius: 17px 0 0 17px;
    margin-top: 10px;
+   padding-left: 0px;
    width: 100px;
    height:120px;
 }
 /*ITEM 2*/
-.item2 {
+#item2 {
    margin-top: 20px;
    margin-left: 19px;
 }
