--- a/style.css
+++ b/style.css
@@ -27,6 +27,11 @@ header {
    display: flex;
    flex-direction: row;
    align-items: baseline;
+   font-size: 12px;
+}
+.logo-img{
+   height: 40px;
+   width: 85px;
 }
 
 /* navigation*/
@@ -177,9 +182,13 @@ input {
 
 .card {
    background: white;
-   border: 2px solid white;
+   width: 200px;
    border-radius: 17px 17px 17px 17px;
+   margin-top: 30px;
+   margin-left: 15px;
+   height: 180px;
 }
+
 .card, h3, p {
    margin-left: 12px;
 }
@@ -188,13 +197,13 @@ input {
    padding-top: 0;
 }
 .card-text{
-   margin-top: -12px;
+   margin-top: -40px;
 }
 .hotel-price{
    margin-bottom: 8px;
    margin-top: -12px;
 }
-.stars {
+.stars, .stars1 {
    color: #0065fc;
    font-size: 12px;
    margin-left: 12px;
@@ -203,17 +212,19 @@ input {
    color: #f2f2f2;
 }
 img {
+ 
+   width: 192px;
    height: 100px;
-   width: 180px;
-   padding-right: 4px;
-   padding-top: 4px;
    padding-left: 4px;
+   margin-top: 4px;
    border-radius: 17px 17px 0 0;
-}
+   object-fit: cover;
+  }
 #container {
    display: grid;
    grid-template-columns: 2fr 1fr;
 }
+
 .item {
    display: flex;
    flex-wrap: wrap;
@@ -253,22 +264,27 @@ img {
    margin-right: 20px;
    margin-left: 12px;
 }
+.info1{
+   margin-top: -30px;
+   padding-left: 60px;
+}
 
 /* ITEM 1*/
 .item1 {
    background: #f2f2f2;
    border-radius: 10px;
+   margin-right: 30px;
+   margin-top: 0px;
 }
 .card-item1{
    display: flex;
    background: white;
    border: 5px solid white;
    border-radius: 17px;
-   margin-right: 30px;
+   margin-right: 50px;
+   margin-top: 30px;
    margin-left: 30px;
-   margin-top: 20px;
    margin-bottom: 20px;
-   height: 120px;
 }
 .item1-icone {
    display: block ruby;
@@ -279,19 +295,66 @@ img {
    margin-top: -14px;
 }
 .card-text-item1{
-   margin-top: 10px;
+   margin-top: -10px;
+   padding-left: 10px;
+}
+.stars1{
+   margin-top: 25px;
 }
 .pop{
    border-radius: 17px 0 0 17px;
-   margin-top: 10px;
-   padding-left: 0px;
-   width: 100px;
-   height:120px;
-}
+   width: 90px;
+   padding-top: 10px;
+ }
 /*ITEM 2*/
+.container2{
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+}
 #item2 {
    margin-left: 19px;
    margin-bottom: 20px;
+   padding-top: 15px;
+}
+.bloc-image-item{
+   display: flex;
+   flex-wrap: wrap;
+   align-self: flex-end;
+}
+.activite1{
+   height: 350px;
+   margin-bottom: 50px;
+}
+.activite2{
+   margin-left: 50px;
+   padding-bottom: 42px;
+ }
+.activite3{
+   margin-left: 50px;
+}
+.container-item2{
+   display: flex;
+  flex-wrap: wrap;
+}
+.section2{
+   display: flex;  
+   flex-wrap: wrap;
+}
+.card-item2{
+   display: flex;
+   flex-direction: column;
+}
+.card-text2{
+   margin-top: -40px;
+   padding-left: 50px;
+  }
+.activite3, .activite2, .activite1{
+   width: 250px;
+   object-fit: cover; 
+}
+.activite3{
+   padding-bottom: 50px;
+   margin-top: 45px;
 }
 
 /*footer*/
