--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@ header {
    font-size: 12px;
 }
 .logo-img{
-   height: 40px;
-   width: 85px;
+   height: 50px;
+   width: 110px;
 }
 
 /* navigation*/
@@ -64,7 +64,6 @@ header {
 }
 .nav li {
    margin-right: 30px;
-
    float: left;
    justify-content: space-between;
 }
@@ -77,9 +76,7 @@ h1 {
    padding-top: 20px;
    font-size: 18px;
 }
-h2{
-   margin-left: 20px;
-}
+
 .recherche {
    display: flex;
    padding-top: 10px;
@@ -107,16 +104,24 @@ h2{
    width: 112px;
 }
 
+.filtre {
+   display: flex;
+   margin-top: 45px;
+   flex-wrap: wrap;
+}
+
+
 .content,
 h2 {
    padding-top: 4px;
+   margin-top: 20px;
    font-size: 20px;
 }
+
 .box-filtre {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
-   height: 40px;
    margin-left: 20px;
    margin-top: 10px;
 }
@@ -171,31 +176,62 @@ input {
    margin: 18px;
    border-radius: 50%;
 }
-/*2 ème partie*/
-/* ITEM 1*/
-.item,h2 {
-   font-size: 20px;
+/* 1ere partie*/
+.card{
+   background-color:  white;
+   border-radius: 17px 17px 0 0 ;
+   margin-top: 12px;
+   padding-bottom: 10px;
 }
-
-.card {
-   background: white;
-   width: 200px;
-   border-radius: 17px 17px 17px 17px;
-   margin-top: 30px;
-   margin-left: 15px;
-   height: 180px;
+.container-hebergement{
+   background-color: #F2F2F2;
+   width: 750px;
 }
-
-.card, h3, p {
-   margin-left: 12px;
+.img-hebergement{
+   padding-right: 5px;
 }
-.card-text, p {
-   margin-top: 0;
-   padding-top: 0;
+.card-hebergement{
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-evenly;
 }
 .card-text{
-   margin-top: -40px;
+   margin-left: 5px;
+   margin-top: -12px;
 }
+.text{
+   margin-left: 12px;
+}
+
+/*Partie Populaire*/
+.container-populaire{
+   background: #f2f2f2;
+   width: 350px;  
+   margin-left: 20px;
+}
+.card-populaire{
+   display: flex;
+   justify-content: center;
+   background: white;
+   border-radius: 17px 17px 17px 17px ;
+   width: 270px;
+   margin-left: 35px;
+   margin-bottom: 20px;
+}
+.pop{
+   border-radius: 17px 0 0 17px;
+   width: 110px;
+   margin-left: -5px;
+ }
+ .card-text-populaire{
+   width: 135px;
+   margin-top: 15px;
+   margin-bottom: 5px;
+   padding-left: 12px;
+ }
+
+/*2ème partie*/
+
 .hotel-price{
    margin-bottom: 8px;
    margin-top: -12px;
@@ -203,163 +239,66 @@ input {
 .stars, .stars1 {
    color: #0065fc;
    font-size: 12px;
-   margin-left: 12px;
 }
 .Icon-starColor {
    color: #f2f2f2;
 }
 img {
-   width: 192px;
+   width: 196px;
    height: 100px;
    padding-left: 4px;
    margin-top: 4px;
    border-radius: 17px 17px 0 0;
    object-fit: cover;
-}
-#container {
-   display: grid;
-   grid-template-columns: 2fr 1fr;
-}
-
-.item {
-   display: flex;
-   flex-wrap: wrap;
-   flex-direction: row;
-   background: #f2f2f2;
-   height: 650px;
-   width: 800px;
-   border-radius: 10px;
-   }
-
-.bloc-image{
-   display: flex;
-   flex-wrap: wrap;
-   flex-direction: row; 
-   margin-bottom: 400px;
-   margin-top: 12px;
-   justify-content: space-evenly;
- }
-.card-img{
-   padding-bottom: 30px;
-}
-
-.container {
-   display: grid;
-   grid-template-columns: 2fr 1fr;
-}
-.item {
-   display: flex;
-   flex-wrap: wrap;
-   flex-direction: row;
-   background: #f2f2f2;
-   height: 580px;
-   width: 800px;
-   border-radius: 10px;
-}
-.item,h2 {
-   margin-right: 20px;
-   margin-left: 12px;
-}
-.info1{
-   margin-top: -30px;
-   padding-left: 60px;
-}
-
-/* ITEM 1*/
-.item1 {
-   background: #f2f2f2;
-   border-radius: 10px;
-   margin-right: 30px;
-   margin-top: 0px;
-}
-.card-item1{
-   display: flex;
-   background: white;
-   border: 5px solid white;
-   border-radius: 17px;
-   margin-right: 50px;
-   margin-top: 30px;
-   margin-left: 30px;
-   margin-bottom: 20px;
-}
-.item1-icone {
-   display: block ruby;
-   font-size: 15px;
-   margin-left: 12px;
-}
-.item1-img{
-   margin-top: -14px;
-}
-.card-text-item1{
-   margin-top: -10px;
-   padding-left: 10px;
-}
-.stars1{
-   margin-top: 25px;
-}
-.pop{
-   border-radius: 17px 0 0 17px;
-   width: 90px;
-   padding-top: 10px;
- }
-/*ITEM 2*/
-.container2{
-   display: grid;
-   grid-template-columns: 1fr 1fr;
-}
-#item2 {
-   margin-left: 19px;
-   margin-bottom: 20px;
-   padding-top: 15px;
-}
-#item2 p{
-   margin-left: 60px;
-   margin-top: -60px;
-}
-.bloc-image-item{
-   display: flex;
-   flex-wrap: wrap;
-   align-self: flex-end;
-}
-.activite1{
-   height: 220px;
-   padding-left: 0;
-   margin-bottom: 50px;
-   border: 2px solid #f2f2f2;
-   object-position: left;
-}
-.activite2{
-   margin-left: 50px;
-   padding-bottom: 42px;
-   padding-left: 0;
-   margin-bottom: 30px;
-   border: 2px solid #f2f2f2;
-   border-radius: 17px 17px 17px 17px;
-   height: 100px;
- }
-.activite3{
-   margin-left: 50px;
-   margin-bottom: 50px;
-   padding-left: 0;
-   border: 2px solid #f2f2f2;
-   height: 90px;
    object-position: center;
-   
+ }
+#container {
+   display: flex;
+   flex-wrap: wrap-reverse;
 }
-.container-item2{
+/*Activite*/
+.album{
    display: flex;
    flex-wrap: wrap;
+   justify-content: space-evenly;
 }
-.section2{
-   display: flex;  
-   flex-wrap: wrap;
+.container-activite{
+   padding-top: 20px;
+}
+.activite{
+   margin-top: 50px;
+   padding-right: 3px;
 }
 
-
-.activite3, .activite2, .activite1{
-   width: 250px;
-   object-fit: cover; 
-   overflow: hidden;
+.img1{
+   height: 390px;
+   width: 225px;
+   padding-left: 0;
+  /* object-position: 50% 50px;*/
+}
+.img2{
+   height: 150px;
+   width: 225px;
+   padding-left: 0;
+}
+.img3{
+    height: 80px;
+    width: 225px;
+    padding-left: 0;
+}
+.img4{
+   width: 225px;
+}
+.img5{
+   width: 225px;
+   padding-left: 0;
+}
+.text-activite{
+   border: 2px solid #F2F2F2;
+   margin-top: -10px;
+   background-color: white;
+   border-radius: 0 0 17px 17px;
+   padding-left: 5px;
 }
 
 /*footer*/
@@ -379,33 +318,4 @@ ul {
    padding: 0;
    list-style-type: none;
    text-align: left;
-}
-
-@media all and (max-width: 1280px)
-
-{
-   .card-item2{
-      margin-left: 50px;
-   }
-   .section2{
-      margin-left: 90px;
-   }
-   .activite2, .activite3{
-      margin-left: 0px;
-   }
-   .bloc-image-item2{
-      margin-left: 50px;
-   }
-  .container2{
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: column;
-   }
-   footer{
-   display: flex;
-   flex-wrap: wrap;
-   margin-left: 90px;
-   margin-right: 90px;
-}
-   
 }
