--- a/style.css
+++ b/style.css
@@ -24,21 +24,26 @@ h3 {
 header {
    background-color: white;
 }
-.logo {
+header li{
+   padding-right: 45px;
+}
+.logo-img{
+   height: 40px;
+   width: 96px;
    display: flex;
    flex-direction: row;
    align-items: baseline;
    font-size: 12px;
 }
-.logo-img{
-   height: 50px;
-   width: 110px;
+img .logo-img{
+   padding-top: 12px;
 }
 
 /* navigation*/
 .navbar {
    display: flex;
    justify-content: space-between;
+   justify-items: center;
    padding-top: 45px;
    overflow:hidden;
 }
@@ -47,27 +52,29 @@ header {
 .page-courante {
    color: blue;
    border-top: 2px blue solid;
-   padding-top: 20px;
-}
-.connexion {
+ }
+a.connexion {
    color: #0065fc;
    font-weight: 700;
+   padding-right: 45px;
 }
 
-.nav ul {
+.navbar ul {
    list-style-type: none;
    display: flex;
    flex-wrap: wrap-reverse;
    justify-content: flex-end;
-}
+ }
 .nav li {
    margin-right: 30px;
    float: left;
    justify-content: space-between;
 }
+.nav ul li{
+   padding-top: 40px;
+}
 .nav a {
    font-size: 1.3em;
- 
 } 
  
 /*main */
@@ -75,15 +82,42 @@ h1 {
    padding-top: 20px;
    font-size: 18px;
 }
+h2{
+   padding-left: 15px;
+}
 
 .recherche {
+   display: inline-flex;
+   flex-direction: row;
+   margin-top: 15px;
+   margin-bottom: 35px;
+ }
+.localisation{
    display: flex;
-   padding-top: 10px;
-   overflow: hidden;
-   text-align: center;
-   padding-right: 12px;
-   height: 40px;
+   justify-content: center;
+   align-items: center;
+   margin-left: 18px;
+   width: 60px;
+   height: 60px;
+   background-color: #F2F2F2;
+   border-radius: 12px 0 0 12px;
 }
+.search::placeholder{
+   color: rgb(170, 170, 170);
+   font-size: 16px;
+   font-weight: 600;
+}
+button.submit{
+   border: none;
+   border-radius: 0 14px 14px 0;
+   background-color: #0065fc;
+   color: white;
+   font-weight: 700;
+   font-size: 16px;
+   padding: 17px;
+   cursor: pointer;
+}
+
 .fa-map-marker-alt {
    background-color: #f2f2f2;
    padding: 5px 10px;
@@ -93,7 +127,9 @@ h1 {
 .search {
    padding: 5px 0;
    border: 1px solid #deebff;
+   padding-left: 10px;
 }
+
 .submit {
    padding: 5px 25px;
    border-radius: 0 95px 95px 0;
@@ -102,60 +138,62 @@ h1 {
    color: white;
    width: 112px;
 }
+i.fas.fa-map-marker-alt{
+   padding-top: 0px;
+}
 
 .filtre {
-   display: flex;
-   margin-top: 45px;
-   flex-wrap: wrap;
+   display: inline-flex; 
+   padding-right: 20px;
 }
 
 
-.content,
-h2 {
-   padding-top: 4px;
-   margin-top: 20px;
-   font-size: 20px;
+.content{
+   display: flex;
+   flex-direction: row;
+   padding: 0;
+   justify-content: start ;
 }
 
 .box-filtre {
-   display: flex;
+   display: inline-flex;
+   flex-direction: row;
    flex-wrap: wrap;
-   justify-content: center;
-   margin-left: 20px;
-   margin-top: 10px;
+   padding: 0;
+   justify-content: end;
+   margin-left: 5px;
 }
 .box {
    border: solid #f2f2f2;
    border-radius: 45px 45px 45px 45px;
-   overflow: hidden;
-   text-align: center;
    display: flex;
    margin-right: 16px;
+   padding-top: 6px;
+   height: 30px;
 }
-
-input {
-   border: none;
-   font-weight: bold;
-   color: black;
+.box:hover{
+   background-color: aqua;
 }
-.box .fas {
-   align-items: center;
-   background: #f2f2f2;
+.box-icone{
+   background-color: #F2F2F2;
+   color: blue;
    border-radius: 50% 50%;
-   width: 35px;
-   border: 1px solid #f2f2f2;
-   padding-top: 10px;
-   color: #0065fc;
-   padding-top: 8px;
-}
-.box .fas:hover{
-   background-color: gold;
+   margin-left: 0px;
+   margin-top: -10px;
+   margin-right: 15px;
+   padding-bottom: 2px;
+   height: 40px;
+   width: 40px;   
 }
 
-input {
-   text-align: center;
-   color: black;
+.box i.fas{
+   padding-top: 15px;
+   margin-left: 8px;
 }
+.box-text-icone{
+   margin-right: 12px;
+}
+
 /*information*/
 
 .info {
@@ -185,6 +223,7 @@ input {
 .container-hebergement{
    background-color: #F2F2F2;
    width: 750px;
+   border-radius: 15px 15px 15px 15px;
 }
 .img-hebergement{
    padding-right: 5px;
@@ -207,6 +246,7 @@ input {
    background: #f2f2f2;
    width: 350px;  
    margin-left: 20px;
+   border-radius: 15px 15px 15px 15px;
 }
 .card-populaire{
    display: flex;
@@ -254,13 +294,13 @@ img {
 #container {
    display: flex;
    flex-wrap: wrap-reverse;
+   padding-left: 20px;
 }
 /*Activite*/
 .album{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
-   padding-top: 70px;
 }
 .container-activite{
    padding-top: 20px;
@@ -331,18 +371,39 @@ ul {
    display: flex;
    flex-wrap: wrap;
    padding-right: 45px;
-   margin-left: 30px;
+   margin-left: 35px;
 }
 .card-footer{
-   margin-right: 45px;
-   padding-right: 50px;
+    padding-right: 120px;
+    margin-right: 80px;
 }
 
 
 @media (max-width: 768px) {
+   .navbar{
+      width: 100%;
+   }
+   .nav ul{
+      margin-top: -50px;
+      padding-right: 56px;
+   }
+   a.page-courante{
+      border-top: none;
+      border-bottom: 2px blue solid;
+   }
+   a.page-activite{
+      border-bottom: 2px #F2F2F2 solid;
+      flex-direction: column-reverse;
+   }
+   
    .container-hebergement {
-      background: none;
-    
+      background: none; 
+     
+  }
+  .box{
+     display: inline-flex;
+      margin-bottom: 12px;
+      
   }
   .card-footer{
      display: flex;
